--- a/argocd/applications/kafka-cluster.yaml
+++ b/argocd/applications/kafka-cluster.yaml
@@ -8,7 +8,7 @@ spec:
     namespace: kafka
     server: 'https://kubernetes.default.svc'
   source:
-    path: ./kafka
+    path: ./kafka/cluster
     repoURL: 'https://github.com/edwindijkstrainmarsat/strimzi-demo.git'
     targetRevision: HEAD
   project: default
