--- a/argocd/applications/kube-prometheus-operator.yaml
+++ b/argocd/applications/kube-prometheus-operator.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   destination:
     name: ''
-    namespace: kafka
+    namespace: monitoring
     server: 'https://kubernetes.default.svc'
   source:
     path: ''
