update prometheus parameter override

--- a/argocd/applications/kube-prometheus-operator.yaml
+++ b/argocd/applications/kube-prometheus-operator.yaml
@@ -14,7 +14,9 @@ spec:
     chart: kube-prometheus-stack
     helm:
       parameters:
-        - name: dashboards.enabled
+        - name: prometheus.prometheusSpec.podMonitorSelectorNilUsesHelmValues
+          value: 'false'
+        - name: prometheus.prometheusSpec.ignoreNamespaceSelectors
           value: 'true'
   sources: []
   project: default
