--- a/kafka/cluster/cluster.yaml
+++ b/kafka/cluster/cluster.yaml
@@ -15,6 +15,8 @@ spec:
         port: 9093
         type: internal
         tls: true
+    authorization:
+      type: simple
     readinessProbe:
       initialDelaySeconds: 15
       timeoutSeconds: 5
