--- a/kafka/cluster/cluster.yaml
+++ b/kafka/cluster/cluster.yaml
@@ -7,14 +7,18 @@ spec:
     version: 3.6.0
     replicas: 3
     listeners:
+      - name: plain
+        port: 9092
+        type: internal
+        tls: false
       - name: tls
         port: 9093
         type: internal
         tls: true
         authentication:
           type: scram-sha-512
-    authorization:
-      type: simple
+    # authorization:
+    #   type: simple
     readinessProbe:
       initialDelaySeconds: 15
       timeoutSeconds: 5
