--- a/kafka/cluster/cluster-topic.yaml
+++ b/kafka/cluster/cluster-topic.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     strimzi.io/cluster: my-cluster
 spec:
-  # partitions: 1
+  partitions: 1
   # replicas: 1
   config:
     retention.ms: 7200000
