--- a/kafka/cluster/cluster-topic.yaml
+++ b/kafka/cluster/cluster-topic.yaml
@@ -5,8 +5,10 @@ metadata:
   labels:
     strimzi.io/cluster: my-cluster
 spec:
-  partitions: 2
+  partitions: 1
   replicas: 1
   config:
+    default.replication.factor: 3
     retention.ms: 7200000
     segment.bytes: 1073741824
+    in.insync.replicas: 2
