--- a/kafka/cluster/cluster.yaml
+++ b/kafka/cluster/cluster.yaml
@@ -15,8 +15,8 @@ spec:
         port: 9093
         type: internal
         tls: true
-        authentication:
-          type: scram-sha-512
+        # authentication:
+        #   type: scram-sha-512
     # authorization:
     #   type: simple
     readinessProbe:
