test file pointing to license

--- a/kafka/cluster/file-connector.yaml
+++ b/kafka/cluster/file-connector.yaml
@@ -16,5 +16,5 @@ spec:
   class: org.apache.kafka.connect.file.FileStreamSourceConnector
   tasksMax: 2
   config:
-    file: "/proc/loadavg"
+    file: "/opt/kafka/LICENSE"
     topic: filestream-topic
