--- a/kafka/cluster/cluster.yaml
+++ b/kafka/cluster/cluster.yaml
@@ -64,6 +64,13 @@ spec:
   kafkaExporter:
     topicRegex: ".*"
     groupRegex: ".*"
+  cruiseControl:
+    metricsConfig:
+      type: jmxPrometheusExporter
+      valueFrom:
+        configMapKeyRef:
+          name: cruise-control-metrics
+          key: metrics-config.yml
 ---
 kind: ConfigMap
 apiVersion: v1
@@ -248,3 +255,18 @@ data:
       labels:
         replicaId: "$2"
         memberType: "$3"
+---
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: cruise-control-metrics
+  labels:
+    app: strimzi
+data:
+  metrics-config.yml: |
+    # See https://github.com/prometheus/jmx_exporter for more info about JMX Prometheus Exporter metrics
+    lowercaseOutputName: true
+    rules:
+    - pattern: kafka.cruisecontrol<name=(.+)><>(\w+)
+      name: kafka_cruisecontrol_$1_$2
+      type: GAUGE
