--- a/argocd/applications/ui-for-kafka.yaml
+++ b/argocd/applications/ui-for-kafka.yaml
@@ -19,6 +19,7 @@ spec:
             clusters:
               - name: strimzi
                 bootstrapServers: my-cluster-kafka-bootstrap:9092
+                schemaRegistry: http://kafka-schema-ksqldb-cp-schema-registry:8081
           auth:
             type: disabled
           management:
