--- a/argocd/applications/kube-prometheus-operator.yaml
+++ b/argocd/applications/kube-prometheus-operator.yaml
@@ -7,24 +7,29 @@ spec:
     name: ''
     namespace: monitoring
     server: 'https://kubernetes.default.svc'
-  source:
-    path: ''
-    repoURL: 'https://prometheus-community.github.io/helm-charts'
-    targetRevision: 54.2.2
-    chart: kube-prometheus-stack
-    helm:
-      parameters:
-        - name: prometheus.prometheusSpec.podMonitorSelectorNilUsesHelmValues
-          value: 'false'
-        - name: prometheus.prometheusSpec.ignoreNamespaceSelectors
-          value: 'true'
-        - name: prometheus.prometheusSpec.probeSelectorNilUsesHelmValues
-          value: 'false'
-        - name: prometheus.prometheusSpec.ruleSelectorNilUsesHelmValues
-          value: 'false'
-        - name: prometheus.prometheusSpec.serviceMonitorSelectorNilUsesHelmValues
-          value: 'false'
-  sources: []
+  sources:
+    - repoURL: 'https://prometheus-community.github.io/helm-charts'
+      targetRevision: 54.2.2
+      chart: kube-prometheus-stack
+      helm:
+        parameters:
+          - name: prometheus.prometheusSpec.podMonitorSelectorNilUsesHelmValues
+            value: 'false'
+          - name: prometheus.prometheusSpec.ignoreNamespaceSelectors
+            value: 'true'
+          - name: prometheus.prometheusSpec.probeSelectorNilUsesHelmValues
+            value: 'false'
+          - name: prometheus.prometheusSpec.ruleSelectorNilUsesHelmValues
+            value: 'false'
+          - name: prometheus.prometheusSpec.serviceMonitorSelectorNilUsesHelmValues
+            value: 'false'
+          - name: prometheus.prometheusSpec.additionalConfig.name
+            value: 'additional-scrape-configs'
+          - name: prometheus.prometheusSpec.additionalConfig.key
+            value: 'prometheus-additional.yaml'
+    - repoURL: 'https://github.com/edwindijkstrainmarsat/strimzi-demo.git'
+      path: ./kafka/monitoring
+      targetRevision: HEAD
   project: default
   syncPolicy:
     automated:
