--- a/argocd/applications/strimzi-operator.yaml
+++ b/argocd/applications/strimzi-operator.yaml
@@ -7,18 +7,15 @@ spec:
     name: ''
     namespace: kafka
     server: 'https://kubernetes.default.svc'
-  sources:
-    - repoURL: 'https://strimzi.io/charts/'
-      path: ''
-      targetRevision: 0.38.0
-      chart: strimzi-kafka-operator
-      helm:
-        parameters:
-          - name: dashboards.enabled
-            value: 'true'
-    - repoURL: 'https://github.com/edwindijkstrainmarsat/strimzi-demo.git'
-      path: ./kafka/monitoring
-      targetRevision: HEAD
+  source:
+    repoURL: 'https://strimzi.io/charts/'
+    path: ''
+    targetRevision: 0.38.0
+    chart: strimzi-kafka-operator
+    helm:
+      parameters:
+        - name: dashboards.enabled
+          value: 'true'
   project: default
   syncPolicy:
     automated:
