--- a/argocd/applications/kube-prometheus-operator.yaml
+++ b/argocd/applications/kube-prometheus-operator.yaml
@@ -13,10 +13,11 @@ spec:
       chart: kube-prometheus-stack
       helm:
         values: |-
-          prometheus.prometheusSpec.additionalConfig
-            additionalScrapeConfigs:
-              name: additional-scrape-configs
-              key: prometheus-additional.yaml
+          prometheus:
+            prometheusSpec:
+              additionalScrapeConfigs:
+                name: additional-scrape-configs
+                key: prometheus-additional.yaml
         parameters:
           - name: prometheus.prometheusSpec.podMonitorSelectorNilUsesHelmValues
             value: 'false'
