Revert "fix schema"
This reverts commit 88b18ca4adfcbb8916c44612fc99dabd391728c5.

--- a/argocd/applications/kube-prometheus-operator.yaml
+++ b/argocd/applications/kube-prometheus-operator.yaml
@@ -13,11 +13,10 @@ spec:
       chart: kube-prometheus-stack
       helm:
         values: |-
-          prometheus:
-            prometheusSpec:
-              additionalScrapeConfigs:
-                name: additional-scrape-configs
-                key: prometheus-additional.yaml
+          prometheus.prometheusSpec.additionalConfig
+            additionalScrapeConfigs:
+              name: additional-scrape-configs
+              key: prometheus-additional.yaml
         parameters:
           - name: prometheus.prometheusSpec.podMonitorSelectorNilUsesHelmValues
             value: 'false'
