disable redundant prometheus

--- a/kafka/monitoring/prometheus.yaml
+++ b/kafka/monitoring/prometheus.yaml
@@ -45,33 +45,33 @@ subjects:
     name: prometheus-server
     namespace: kafka
 
----
-apiVersion: monitoring.coreos.com/v1
-kind: Prometheus
-metadata:
-  name: prometheus
-  labels:
-    app: strimzi
-spec:
-  replicas: 1
-  serviceAccountName: prometheus-server
-  podMonitorSelector:
-    matchLabels:
-      app: strimzi
-  serviceMonitorSelector: {}
-  resources:
-    requests:
-      memory: 400Mi
-  enableAdminAPI: false
-  ruleSelector:
-    matchLabels:
-      role: alert-rules
-      app: strimzi
-  alerting:
-    alertmanagers:
-    - namespace: kafka
-      name: alertmanager
-      port: alertmanager
-  additionalScrapeConfigs:
-    name: additional-scrape-configs
-    key: prometheus-additional.yaml
+# ---
+# apiVersion: monitoring.coreos.com/v1
+# kind: Prometheus
+# metadata:
+#   name: prometheus
+#   labels:
+#     app: strimzi
+# spec:
+#   replicas: 1
+#   serviceAccountName: prometheus-server
+#   podMonitorSelector:
+#     matchLabels:
+#       app: strimzi
+#   serviceMonitorSelector: {}
+#   resources:
+#     requests:
+#       memory: 400Mi
+#   enableAdminAPI: false
+#   ruleSelector:
+#     matchLabels:
+#       role: alert-rules
+#       app: strimzi
+#   alerting:
+#     alertmanagers:
+#     - namespace: kafka
+#       name: alertmanager
+#       port: alertmanager
+#   additionalScrapeConfigs:
+#     name: additional-scrape-configs
+#     key: prometheus-additional.yaml
