--- a/kafka/cluster/connect.yaml
+++ b/kafka/cluster/connect.yaml
@@ -49,6 +49,10 @@ spec:
         artifacts:
           - type: zip
             url: https://github.com/ClickHouse/clickhouse-kafka-connect/releases/download/v1.0.7/clickhouse-kafka-connect-v1.0.7.zip
+      - name: castorm-kafka-connect-http
+        artifacts:
+          - type: zip
+            url: https://github.com/castorm/kafka-connect-http/releases/download/v0.8.11/castorm-kafka-connect-http-0.8.11.zip
 ---
 kind: ConfigMap
 apiVersion: v1
