--- a/kafka/cluster/connect.yaml
+++ b/kafka/cluster/connect.yaml
@@ -45,7 +45,7 @@ spec:
             group: org.apache.kafka
             artifact: connect-file
             version: 3.6.0
-      - name: http
+      - name: castorm-kafka-connect
         artifacts:
           - type: zip
             url: https://github.com/castorm/kafka-connect-http/releases/download/v0.8.11/castorm-kafka-connect-http-0.8.11.zip
@@ -53,8 +53,6 @@ spec:
         artifacts:
           - type: zip
             url: https://github.com/ClickHouse/clickhouse-kafka-connect/releases/download/v1.0.7/clickhouse-kafka-connect-v1.0.7.zip
-
-
 ---
 kind: ConfigMap
 apiVersion: v1
