--- a/kafka/cluster/connect.yaml
+++ b/kafka/cluster/connect.yaml
@@ -37,7 +37,8 @@ spec:
       # it should not happen that you pull someone else's container image. However, we
       # recommend changing this to your own container registry or using a different
       # image name for any other than demo purposes.
-      image: ttl.sh/strimzi-connect-edwin-test6:24h
+      image: ttl.sh/strimzi-connect-edwin-test7:24h
+      additionalKanikoOptions: --single-snapshot
     plugins:
       - name: kafka-connect-file
         artifacts:
