--- a/argocd/bootstrap/strimzi.yaml
+++ b/argocd/bootstrap/strimzi.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: AoA-General
+  name: AoA-Crossplane
 spec:
   destination:
     name: ''
     namespace: argocd
     server: 'https://kubernetes.default.svc'
   source:
-    path: ./argocd/applications/general
+    path: ./argocd/applications/strimzi
     repoURL: 'https://github.com/edwindijkstrainmarsat/strimzi-demo.git'
     targetRevision: HEAD
   project: default
