add some config for crossplane

--- a/argocd/applications/crossplane/crossplane.yaml
+++ b/argocd/applications/crossplane/crossplane.yaml
@@ -6,10 +6,13 @@ spec:
   destination:
     namespace: crossplane-system
     server: 'https://kubernetes.default.svc'
-  source:
-    repoURL: 'https://charts.crossplane.io/stable'
-    targetRevision: 1.14.3
-    chart: crossplane
+  sources:
+    - repoURL: 'https://charts.crossplane.io/stable'
+      targetRevision: 1.14.3
+      chart: crossplane
+    - repoURL: 'https://github.com/edwindijkstrainmarsat/strimzi-demo.git'
+      path: ./argocd/crossplane-workload
+      targetRevision: HEAD
   project: default
   syncPolicy:
     syncOptions:
