--- a/crossplane-workload/ec2.yaml
+++ b/crossplane-workload/ec2.yaml
@@ -1,21 +1,13 @@
 apiVersion: ec2.aws.upbound.io/v1beta1
 kind: Instance
 metadata:
-  annotations:
-    meta.upbound.io/example-id: ec2/v1beta1/instance
-    uptest.upbound.io/timeout: "3600"
   labels:
-    testing.upbound.io/example-name: sample-instance
-  name: sample-instance
+    testing.upbound.io/example-name: instance
+  name: instance
 spec:
   forProvider:
-    ami: ami-07b068f843ec78e72
-    creditSpecification:
-      - cpuCredits: unlimited
+    ami: ami-0d9858aa3c6322f73
     instanceType: t2.micro
-    networkInterface:
-      - deviceIndex: 0
-        networkInterfaceIdSelector:
-          matchLabels:
-            testing.upbound.io/example-name: sample-instance
-    region: us-west-1
+    region: us-east-1
+    tags:
+      type: upbound-test-instance
