add ebsBlockDevice block

--- a/crossplane-workload/ec2.yaml
+++ b/crossplane-workload/ec2.yaml
@@ -12,7 +12,8 @@ spec:
     ami: ami-0fc5d935ebf8bc3bc
     instanceType: t3.micro
     region: us-east-1
-    volumeType: gp3
-    volumeSize: 10
+    ebsBlockDevice:
+      volumeType: gp3
+      volumeSize: 10
     tags:
       type: upbound-test-instance
