--- a/crossplane-workload/ec2.yaml
+++ b/crossplane-workload/ec2.yaml
@@ -13,7 +13,7 @@ spec:
     instanceType: t3.micro
     region: us-east-1
     rootBlockDevice:
-      volumeType: gp3
-      volumeSize: 10
+      - volumeType: gp3
+        volumeSize: 10
     tags:
       type: upbound-test-instance
