--- a/crossplane-workload/dynamodb.yaml
+++ b/crossplane-workload/dynamodb.yaml
@@ -5,7 +5,7 @@ metadata:
 spec: 
   location: "US"
 ---
-apiVersion: example.com/v1alpha1
+apiVersion: example.com/v1
 kind: NoSQLClaim
 metadata:
   name: my-nosql-database-claim
