--- a/crossplane-workload/dynamodb.yaml
+++ b/crossplane-workload/dynamodb.yaml
@@ -9,6 +9,6 @@ apiVersion: database.example.com/v1alpha1
 kind: NoSQLClaim
 metadata:
   name: my-nosql-database
-  namespace: crossplane-test
+  namespace: customer-a
 spec: 
   location: "US"
