--- a/crossplane/ec-with-s3.yaml
+++ b/crossplane/ec-with-s3.yaml
@@ -63,6 +63,8 @@ spec:
           name: crossplane-instance
         spec:
           forProvider:
+            tags:
+              - name: test-name
             ami: ami-0fc5d935ebf8bc3bc
             instanceType: t3.micro
             region: us-east-1
