--- a/crossplane-workload/dynamodb.yaml
+++ b/crossplane-workload/dynamodb.yaml
@@ -1,14 +1,14 @@
-apiVersion: database.example.com/v1alpha1
-kind: NoSQL
-metadata:
-  name: my-nosql-database
-spec: 
-  location: "US"
----
-apiVersion: database.example.com/v1alpha1
-kind: NoSQLClaim
-metadata:
-  name: my-nosql-database
-  namespace: customer-a
-spec: 
-  location: "US"
+# apiVersion: database.example.com/v1alpha1
+# kind: NoSQL
+# metadata:
+#   name: my-nosql-database
+# spec: 
+#   location: "US"
+# ---
+# apiVersion: database.example.com/v1alpha1
+# kind: NoSQLClaim
+# metadata:
+#   name: my-nosql-database
+#   namespace: customer-a
+# spec: 
+#   location: "US"
