--- a/crossplane-workload/s3.yaml
+++ b/crossplane-workload/s3.yaml
@@ -1,13 +1,13 @@
-apiVersion: s3.aws.upbound.io/v1beta1
-kind: Bucket
-metadata:
-  name: sample-bucket-crossplane
-  annotations:
-    project: "test-project"
-  labels:
-    app.kubernetes.io/instance: some-application
-spec:
-  forProvider:
-    region: us-east-1
-  providerConfigRef:
-    name: default
+# apiVersion: s3.aws.upbound.io/v1beta1
+# kind: Bucket
+# metadata:
+#   name: sample-bucket-crossplane
+#   annotations:
+#     project: "test-project"
+#   labels:
+#     app.kubernetes.io/instance: some-application
+# spec:
+#   forProvider:
+#     region: us-east-1
+#   providerConfigRef:
+#     name: default
