--- a/crossplane-workload/prometheus.yaml
+++ b/crossplane-workload/prometheus.yaml
@@ -10,6 +10,8 @@ spec:
   additionalScrapeConfigs:
     name: additional-scrape-configs
     key: prometheus-additional.yaml
+  scrapeConfigSelector:
+    prometheus: system-monitoring-prometheus
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -58,3 +60,16 @@ stringData:
     - job_name: "prometheus"
       static_configs:
       - targets: ["localhost:9090"]
+---
+apiVersion: monitoring.coreos.com/v1alpha1
+kind: ScrapeConfig
+metadata:
+  name: static-config
+  labels:
+    prometheus: system-monitoring-prometheus
+spec:
+  staticConfigs:
+    - labels:
+        job: prometheus
+      targets:
+        - prometheus.demo.do.prometheus.io:9090
