--- a/crossplane-workload/prometheus.yaml
+++ b/crossplane-workload/prometheus.yaml
@@ -70,7 +70,7 @@ metadata:
   name: customer-a-prometheus
 spec:
   endpoints:
-    - path: /metrics
+    - path: /federate
       port: web
   selector:
     matchLabels:
