--- a/crossplane-workload/prometheus.yaml
+++ b/crossplane-workload/prometheus.yaml
@@ -69,13 +69,14 @@ kind: ServiceMonitor
 metadata:
   name: customer-a-prometheus
 spec:
-  params:
-    'match[]':
-    - '{job%3D~"demo.*"}'
   honorLabels: true
   endpoints:
     - path: /federate
       port: web
+      honorLabels: true
+      params:
+        'match[]':
+        - '{job%3D~"demo.*"}'
   selector:
     matchLabels:
       app: prometheus
