--- a/crossplane-workload/prometheus.yaml
+++ b/crossplane-workload/prometheus.yaml
@@ -76,7 +76,10 @@ spec:
       params:
         'match[]':
         - '{job="demo_node_exporter"}'
-  selector:
-    matchLabels:
-      app: prometheus
-      self-monitor: 'true'
+  # selector:
+  #   matchLabels:
+  #     app: prometheus
+  #     self-monitor: 'true'
+  namespaceSelector:
+    matchNames:
+      - customer-a
