--- a/otel-configs/test-prometheus.yaml
+++ b/otel-configs/test-prometheus.yaml
@@ -1,25 +1,29 @@
 apiVersion: opentelemetry.io/v1alpha1
 kind: OpenTelemetryCollector
 metadata:
-  name: collector-with-ta
+  name: simplest
 spec:
-  mode: statefulset
   config: |
     receivers:
-      prometheus:
-        config:
-          scrape_configs:
-          - job_name: 'otel-collector'
-            scrape_interval: 10s
-            static_configs:
-            - targets: [ '10.0.0.1:8888' ]
+      otlp:
+        protocols:
+          grpc:
+          http:
+    processors:
+      memory_limiter:
+        check_interval: 1s
+        limit_percentage: 75
+        spike_limit_percentage: 15
+      batch:
+        send_batch_size: 10000
+        timeout: 10s
 
     exporters:
       debug:
 
     service:
       pipelines:
-        metrics:
-          receivers: [prometheus]
+        traces:
+          receivers: [otlp]
           processors: []
           exporters: [debug]
