--- a/otel-configs/test-prometheus.yaml
+++ b/otel-configs/test-prometheus.yaml
@@ -5,6 +5,11 @@ metadata:
 spec:
   config: |
     receivers:
+      syslog:
+        udp:
+          listen_address: "0.0.0.0:54526"
+        protocol: rfc3164
+        location: UTC
       otlp:
         protocols:
           grpc:
