--- a/otel-configs/test-prometheus.yaml
+++ b/otel-configs/test-prometheus.yaml
@@ -10,10 +10,6 @@ spec:
           listen_address: "0.0.0.0:54526"
         protocol: rfc3164
         location: UTC
-      otlp:
-        protocols:
-          grpc:
-          http:
     processors:
       memory_limiter:
         check_interval: 1s
@@ -29,6 +25,6 @@ spec:
     service:
       pipelines:
         traces:
-          receivers: [otlp]
+          receivers: [syslog]
           processors: []
           exporters: [debug]
